Add ComparableQuantity to unit test dependencies